# florence2.cpp

./: .gitignore  LICENSE  MODULE.bazel  README.md
florence2/: BUILD  encoder_kvcache.cc  example.cc  model.cc  model.h  model_benchmark.cc  model_test.cc  processor.cc  processor_test.cc  tokenizer_test.cc
testdata/: BUILD
